--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="C:/Users/vmadmin/Downloads/jna-4.2.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/vmadmin/Downloads/jna-platform-4.2.1.jar"/>
+	<classpathentry kind="lib" path="src/javax.json-1.0.4.jar"/>
+	<classpathentry kind="lib" path="src/javax.json-api-1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
