--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,55 @@
 	<classpathentry kind="lib" path="C:/Users/vmadmin/Downloads/jna-platform-4.2.1.jar"/>
 	<classpathentry kind="lib" path="src/javax.json-1.0.4.jar"/>
 	<classpathentry kind="lib" path="src/javax.json-api-1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/fluent-hc-4.5.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/httpclient-4.5.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/httpclient-cache-4.5.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/httpclient-win-4.5.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/httpcore-4.4.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/httpmime-4.5.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/jna-4.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/jna-platform-4.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/json-20160212.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-api-client-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-api-client-android-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-api-client-appengine-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-api-client-gson-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-api-client-jackson2-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-api-client-java6-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-api-client-protobuf-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-api-client-servlet-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-api-client-xml-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-http-client-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-http-client-android-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-http-client-appengine-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-http-client-gson-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-http-client-jackson-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-http-client-jackson2-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-http-client-jdo-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-http-client-protobuf-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-http-client-xml-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-oauth-client-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-oauth-client-appengine-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-oauth-client-java6-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-oauth-client-jetty-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/google-oauth-client-servlet-1.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/gson-2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/guava-jdk5-17.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/httpclient-4.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/httpcore-4.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/jackson-core-2.1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/jackson-core-asl-1.9.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/jdo2-api-2.3-eb.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/jetty-6.1.26.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/jetty-util-6.1.26.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/jsr305-1.3.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/protobuf-java-2.4.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/transaction-api-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/xpp3-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/appengine-api-1.0-sdk-1.9.32.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/commons-lang3-3.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
