--- a/.classpath
+++ b/.classpath
@@ -56,5 +56,10 @@
 	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/xpp3-1.1.4c.jar"/>
 	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/appengine-api-1.0-sdk-1.9.32.jar"/>
 	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/commons-lang3-3.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/commons-io-2.4-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/commons-io-2.4-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/commons-io-2.4-tests.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/commons-io-2.4-test-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
