--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="C:/Users/vmadmin/Downloads/jna-4.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/vmadmin/Downloads/jna-platform-4.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Downloads/jna-platform-4.2.1.jar" sourcepath="C:/Users/vmadmin/Downloads/jna-platform-4.2.1.jar"/>
 	<classpathentry kind="lib" path="src/javax.json-1.0.4.jar"/>
 	<classpathentry kind="lib" path="src/javax.json-api-1.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/commons-codec-1.9.jar"/>
@@ -61,5 +61,10 @@
 	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/commons-io-2.4-sources.jar"/>
 	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/commons-io-2.4-tests.jar"/>
 	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/commons-io-2.4-test-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/bsh.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/clover.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/junit.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vmadmin/Desktop/libraries/maven-ant-tasks-2.1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
