--- a/.classpath
+++ b/.classpath
@@ -2,65 +2,65 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="lib/appengine-api-1.0-sdk-1.9.32.jar"/>
-	<classpathentry kind="lib" path="lib/bsh.jar"/>
-	<classpathentry kind="lib" path="lib/clover.jar"/>
-	<classpathentry kind="lib" path="lib/commons-codec-1.9.jar"/>
-	<classpathentry kind="lib" path="lib/commons-io-2.4-javadoc.jar"/>
-	<classpathentry kind="lib" path="lib/commons-io-2.4-sources.jar"/>
-	<classpathentry kind="lib" path="lib/commons-io-2.4-test-sources.jar"/>
-	<classpathentry kind="lib" path="lib/commons-io-2.4-tests.jar"/>
-	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="lib/commons-lang3-3.4.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/fluent-hc-4.5.2.jar"/>
-	<classpathentry kind="lib" path="lib/google-api-client-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-api-client-android-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-api-client-appengine-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-api-client-gson-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-api-client-jackson2-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-api-client-java6-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-api-client-protobuf-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-api-client-servlet-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-api-client-xml-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-http-client-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-http-client-android-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-http-client-appengine-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-http-client-gson-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-http-client-jackson-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-http-client-jackson2-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-http-client-jdo-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-http-client-protobuf-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-http-client-xml-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-oauth-client-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-oauth-client-appengine-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-oauth-client-java6-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-oauth-client-jetty-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-oauth-client-servlet-1.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/gson-2.1.jar"/>
-	<classpathentry kind="lib" path="lib/guava-jdk5-17.0.jar"/>
-	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/httpclient-4.0.1.jar"/>
-	<classpathentry kind="lib" path="lib/httpclient-4.5.2.jar"/>
-	<classpathentry kind="lib" path="lib/httpclient-cache-4.5.2.jar"/>
-	<classpathentry kind="lib" path="lib/httpclient-win-4.5.2.jar"/>
-	<classpathentry kind="lib" path="lib/httpcore-4.0.1.jar"/>
-	<classpathentry kind="lib" path="lib/httpcore-4.4.4.jar"/>
-	<classpathentry kind="lib" path="lib/httpmime-4.5.2.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-core-2.1.3.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-core-asl-1.9.11.jar"/>
-	<classpathentry kind="lib" path="lib/jdo2-api-2.3-eb.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-6.1.26.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-util-6.1.26.jar"/>
-	<classpathentry kind="lib" path="lib/jna-4.1.0.jar"/>
-	<classpathentry kind="lib" path="lib/jna-platform-4.1.0.jar"/>
-	<classpathentry kind="lib" path="lib/json-20160212.jar"/>
-	<classpathentry kind="lib" path="lib/jsr305-1.3.9.jar"/>
-	<classpathentry kind="lib" path="lib/junit.jar"/>
-	<classpathentry kind="lib" path="lib/maven-ant-tasks-2.1.3.jar"/>
-	<classpathentry kind="lib" path="lib/protobuf-java-2.4.1.jar"/>
-	<classpathentry kind="lib" path="lib/transaction-api-1.1.jar"/>
-	<classpathentry kind="lib" path="lib/xpp3-1.1.4c.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/appengine-api-1.0-sdk-1.9.32.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/bsh.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/clover.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-io-2.4-javadoc.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-io-2.4-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-io-2.4-test-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-io-2.4-tests.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-io-2.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-lang3-3.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/fluent-hc-4.5.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-api-client-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-api-client-android-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-api-client-appengine-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-api-client-gson-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-api-client-jackson2-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-api-client-java6-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-api-client-protobuf-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-api-client-servlet-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-api-client-xml-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-http-client-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-http-client-android-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-http-client-appengine-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-http-client-gson-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-http-client-jackson-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-http-client-jackson2-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-http-client-jdo-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-http-client-protobuf-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-http-client-xml-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-oauth-client-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-oauth-client-appengine-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-oauth-client-java6-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-oauth-client-jetty-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-oauth-client-servlet-1.21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gson-2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/guava-jdk5-17.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/hamcrest-core-1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpclient-4.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpclient-4.5.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpclient-cache-4.5.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpclient-win-4.5.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpcore-4.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpcore-4.4.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpmime-4.5.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jackson-core-2.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jackson-core-asl-1.9.11.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jdo2-api-2.3-eb.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-6.1.26.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-util-6.1.26.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jna-4.1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jna-platform-4.1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/json-20160212.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jsr305-1.3.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/junit.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/maven-ant-tasks-2.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/protobuf-java-2.4.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/transaction-api-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/xpp3-1.1.4c.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
