-Bilder können von Tumblr aus genommen werden -Verlauf der gebrauchten Blogs/Subreddits wird gespeichert

--- a/src/settings.ini
+++ b/src/settings.ini
@@ -2,3 +2,6 @@
 autostart = false
 interval = 30min
 
+[history]
+1462907044 = http\://www.reddit.com/r/wallpapers/search.json?limit\=1&restrict_sr\=true&sort\=new
+
