--- a/settings.ini
+++ b/settings.ini
@@ -1,7 +1,27 @@
 [settings]
-autostart = true
-interval = 10min
-intervalEnabled = false
-saveImages = true
-saveLocation = .
+autostart = Setting 1
+interval = Setting 2
+intervalEnabled = Setting 3
+saveImages = Setting 4
+saveLocation = Setting 5
+
+[history]
+1463652039602 = Eintrag 1
+1463652039603 = Eintrag 2
+1463652039604 = Eintrag 3
+1463652039617 = Eintrag 1
+1463652039618 = Eintrag 2
+1463652039619 = Eintrag 3
+1463652061921 = Eintrag 1
+1463652061922 = Eintrag 2
+1463652061924 = Eintrag 3
+1463652061946 = Eintrag 1
+1463652061948 = Eintrag 2
+1463652061953 = Eintrag 3
+1463652118538 = Eintrag 1
+1463652118539 = Eintrag 2
+1463652118541 = Eintrag 3
+1463652118565 = Eintrag 1
+1463652118566 = Eintrag 2
+1463652118567 = Eintrag 3
 
